--- a/02-connectors/src/BikeShop.API/BikeShop.API.csproj
+++ b/02-connectors/src/BikeShop.API/BikeShop.API.csproj
@@ -8,6 +8,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.2.0" />
+    <PackageReference Include="Steeltoe.CloudFoundry.Connector" Version="1.1.0" />
+    <PackageReference Include="Steeltoe.CloudFoundry.Connector.MySql" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
