--- a/02-connectors/src/BikeShop.API/appsettings.json
+++ b/02-connectors/src/BikeShop.API/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "mysql": {
+    "client": {
+      "sslmode": "none"
+    }
+  },
+  "multipleMySqlDatabases": false
 }
