--- a/02-connectors/.vscode/launch.json
+++ b/02-connectors/.vscode/launch.json
@@ -27,7 +27,7 @@
                 "args": "${auto-detect-url}",
                 "windows": {
                     "command": "cmd.exe",
-                    "args": "/C start ${auto-detect-url}/api/values"
+                    "args": "/C start ${auto-detect-url}/api/bicycle"
                 },
                 "osx": {
                     "command": "open"
