--- a/02-connectors/src/BikeShop.API/appsettings.Development.json
+++ b/02-connectors/src/BikeShop.API/appsettings.Development.json
@@ -5,5 +5,11 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "mysql": {
+    "client": {
+      "sslmode": "none",
+      "ConnectionString": "Server=localhost;Database=BikeShop;Uid=root;Pwd=Abc123!;sslmode=none;"  
+    }
   }
 }
