--- a/04-management/src/BikeShop.API/appsettings.json
+++ b/04-management/src/BikeShop.API/appsettings.json
@@ -15,6 +15,14 @@
       "Default": "Warning"
     }
   },
+  "management": {
+    "endpoints": {
+      "path": "/cloudfoundryapplication",
+      "cloudfoundry": {
+         "validateCertificates": false
+       }
+    }
+  },
   "AllowedHosts": "*",
   "mysql": {
     "client": {
