--- a/04-management/.vscode/launch.json
+++ b/04-management/.vscode/launch.json
@@ -13,9 +13,28 @@
             "args": [],
             "cwd": "${workspaceFolder}/src/BikeShop.API",
             "stopAtEntry": false,
-            "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"
+            // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
+            // NOTE: The following entry SHOULD work but DOES NOT for a .NET Core project in C# as of 2019-09-15.
+            // NOTE: This is a "Preview Feature" from the Feb-2019 release.
+            // "serverReadyAction": {
+            //     "action": "openExternally",
+            //     "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)",
+            //     "uriFormat": "%s/api/values"
+            // },
+            // NOTE: The following DOES work as of 2019-09-15.
+            "launchBrowser": {
+                "enabled": true,
+                "args": "${auto-detect-url}",
+                "windows": {
+                    "command": "cmd.exe",
+                    "args": "/C start ${auto-detect-url}/api/values"
+                },
+                "osx": {
+                    "command": "open"
+                },
+                "linux": {
+                    "command": "xdg-open"
+                }
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
