--- a/04-management/.gitignore
+++ b/04-management/.gitignore
@@ -14,6 +14,6 @@
 
 # End of https://www.gitignore.io/api/visualstudiocode
 
-#src/BikeShopAPI/obj/Debug/netcoreapp2.2/BikeShopAPI.assets.cache
+### Additional Files & Folders ###
 **/bin/**
 **/obj/**
