--- a/04-management/src/BikeShop.API/BikeShop.API.csproj
+++ b/04-management/src/BikeShop.API/BikeShop.API.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Steeltoe.CloudFoundry.Connector.MySql" Version="1.1.0" />
     <PackageReference Include="Steeltoe.Extensions.Configuration.ConfigServerCore" Version="2.3.0" />
     <PackageReference Include="Steeltoe.Management.CloudFoundryCore" Version="2.3.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc4" />
   </ItemGroup>
 
 </Project>
