--- a/01-setup/src/BikeShopAPI/manifest.yml
+++ b/01-setup/src/BikeShopAPI/manifest.yml
@@ -1,7 +1,10 @@
+---
 applications:
-  - buildpack: https://github.com/cloudfoundry/dotnet-core-buildpack
-    name: BikeShop-API-JW
+-   name: BikeShop-API-JW
+    buildpacks:
+    - dotnet-core-buildpack
     memory: 128m
     disk_quota: 256m
     random-route: true
+    stack: cflinuxfs3
     timeout: 180
