--- a/02-connectors/src/BikeShop.API/manifest.yml
+++ b/02-connectors/src/BikeShop.API/manifest.yml
@@ -1,11 +1,12 @@
 ---
 applications:
-- name: BikeShop-API-JW
-  buildpacks:
-   - https://github.com/cloudfoundry/dotnet-core-buildpack
-  memory: 128m
-  disk_quota: 256m
-  random-route: true
-  timeout: 180
-  services:
-   - mysql
+-   name: BikeShop-API-JW
+    buildpacks:
+    - dotnet_core_buildpack
+    memory: 128m
+    disk_quota: 256m
+    random-route: true
+    stack: cflinuxfs3
+    timeout: 180
+    services:
+    - mysql
